Tomcat7 update checks